Fix responsiveness issues

--- a/Design7/pri1311/index.html
+++ b/Design7/pri1311/index.html
@@ -4,19 +4,30 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<!-- Fontawesome icons -->
+		<link
+			rel="stylesheet"
+			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css"
+			integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA=="
+			crossorigin="anonymous"
+			referrerpolicy="no-referrer"
+		/>
+
+		<!-- Bootstrap 4 -->
 		<link
 			rel="stylesheet"
 			href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
 			integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
 			crossorigin="anonymous"
 		/>
+
 		<!-- StyleSheet -->
 		<link rel="stylesheet" href="./style.css" />
 		<title>Document</title>
 	</head>
 	<body>
 		<div class="column">
-			<nav class="navbar navbar-expand-lg">
+			<nav class="navbar navbar-expand-md">
 				<button
 					class="navbar-toggler"
 					type="button"
@@ -26,7 +37,9 @@
 					aria-expanded="false"
 					aria-label="Toggle navigation"
 				>
-					<span class="navbar-toggler-icon"></span>
+					<span class="navbar-toggler-icon"
+						><i class="fas fa-bars"></i
+					></span>
 				</button>
 				<div class="collapse navbar-collapse" id="navbarTogglerDemo01">
 					<div class="row navbar-brand">
@@ -91,10 +104,14 @@
 						<h1>PLACE</h1>
 					</div>
 					<div class="row">
-						<button class="button-concept shadow">
+						<button
+							class="landing-page-button button-concept shadow"
+						>
 							THE CONCEPT
 						</button>
-						<button class="button-contact shadow">
+						<button
+							class="landing-page-button button-contact shadow"
+						>
 							CONTACT US
 						</button>
 					</div>
@@ -105,4 +122,19 @@
 			</div>
 		</div>
 	</body>
+	<script
+		src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+		integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+		crossorigin="anonymous"
+	></script>
+	<script
+		src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+		integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+		crossorigin="anonymous"
+	></script>
+	<script
+		src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+		integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+		crossorigin="anonymous"
+	></script>
 </html>
