--- a/Design6/index.html
+++ b/Design6/index.html
@@ -20,7 +20,7 @@
     <body>
         <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container-fluid">
-              <a class="navbar-brand" href="#">code studio</a>
+              <a class="navbar-brand" href="#">codehouse</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -65,7 +65,7 @@
             <div class="row">
               <div class="col">
                 <h1 style="color: black;font-family: cursive; font-size: 50PX; margin-top: 80PX;">GET HELP WITH <BR>CODING FROM <BR>ENGINEERS.</h1><BR>
-                <P>EXPLORE THE BEST COLLECTIONS FROM<BR> HANDPICKED DIGITAL ARTIST OUT THERE<BR> AND FIND YOUR GEM</P>
+                <P>Learn how to code effeciently and create <br>apps and games that work.Consult with<br> best experts to apply skills in action.</P><br>
                     <button type="button" class="btn btn-dark">Start learning</button>  
                     <button type="button" class="btn" style="color: black;"><i class="fa fa-play-circle" aria-hidden="true"></i>Watch vedio</button> 
                 </div>
