--- a/Design6/index.html
+++ b/Design6/index.html
@@ -67,7 +67,7 @@
                 <h1 style="color: black;font-family: cursive; font-size: 50PX; margin-top: 80PX;">GET HELP WITH <BR>CODING FROM <BR>ENGINEERS.</h1><BR>
                 <P>Learn how to code effeciently and create <br>apps and games that work.Consult with<br> best experts to apply skills in action.</P><br>
                     <button type="button" class="btn btn-dark">Start learning</button>  
-                    <button type="button" class="btn" style="color: black;"><i class="fa fa-play-circle" aria-hidden="true"></i>Watch vedio</button> 
+                    <button type="button" class="btn" style="color: black;"><i class="fa fa-play-circle" aria-hidden="true"></i>Watch video</button> 
                 </div>
               <div class="col">
                 <img class="front_img" src="images/img.png" style="height: 500px; margin-top: 30px;;">
