--- a/Design34/index.html
+++ b/Design34/index.html
@@ -10,21 +10,181 @@
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
       crossorigin="anonymous"
     />
+
+    <link rel="stylesheet" href="./index.css" />
   </head>
   <body>
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark headerComponenet">
+      <div class="container-fluid">
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarTogglerDemo01"
+          aria-controls="navbarTogglerDemo01"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+          <ul class="navbar-nav ms-auto mb-2 mb-lg-0 gap-md-5 gap-2 pt-lg-5">
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="#"
+                >Payment Solution</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Integrations</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">API</a>
+            </li>
+            <li class="nav-item me-5">
+              <a class="nav-link" href="#">Sign in</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <section class="contactSection">
+      <div class="container">
+        <div class="row row-content">
+          <div class="col-12 col-md-4 ps-5 pe-5">
+            <h1 class="HeaderTypography ms-1">Contact us</h1>
+            <form class="mt-5">
+              <div class="form-floating mb-3">
+                <input
+                  type="email"
+                  class="form-control"
+                  id="floatingInput"
+                  placeholder="name@example.com"
+                />
+                <label for="floatingInput">Your Name</label>
+              </div>
+              <div class="form-floating mb-3">
+                <input
+                  type="email"
+                  class="form-control"
+                  id="floatingInput"
+                  placeholder="name@example.com"
+                />
+                <label for="floatingInput">Your Email Address</label>
+              </div>
+              <div class="form-floating mb-5">
+                <textarea
+                  class="form-control"
+                  placeholder="Leave a comment here"
+                  id="floatingTextarea"
+                  style="height: 80px"
+                ></textarea>
+                <label for="floatingTextarea">Please enter your message</label>
+              </div>
+              <div class="d-grid gap-2">
+                <button type="submit" class="btn btn-primary submitBtn">
+                  SUBMIT
+                </button>
+              </div>
+            </form>
+          </div>
+          <div class="col-12 col-md-8 infoCol">
+            <div class="text-center text-md-start mt-5 mt-md-0">
+              <h4 style="font-weight: 300">
+                <strong style="font-weight: 700">Coin</strong>Triggers
+              </h4>
+              <p style="font-weight: 300">
+                Company address line 1 <br />
+                City <br />
+                Country <br />
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="footer text-center text-md-start">
+      <div class="container">
+        <div class="row" style="justify-content: space-between">
+          <div class="col-12 col-md-auto mb-4 mb-md-0">
+            <img
+              src="./images/logo.png"
+              class="img-fluid ms-md-4 me-md-5"
+              style="margin-top: -22px"
+            />
+          </div>
+          <div class="col-6 col-md-4 col-lg-2 mb-4">
+            <div class="me-md-2">
+              <h6 style="font-weight: 700">PRODUCT</h6>
+              <div class="mt-3" style="display: flex; flex-direction: column">
+                <a href="#" class="footerBtn mb-1">Payment solution</a>
+                <a href="#" class="footerBtn">Features</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-6 col-md-4 col-lg-2 mb-4">
+            <div class="me-md-2">
+              <h6 style="font-weight: 700">DEVELOPERS</h6>
+              <div class="mt-3" style="display: flex; flex-direction: column">
+                <a href="#" class="footerBtn mb-1">Integrations</a>
+                <a href="#" class="footerBtn">API</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-6 col-md-4 col-lg-2 mb-4">
+            <div class="me-md-2">
+              <h6 style="font-weight: 700">HELP</h6>
+              <div class="mt-3" style="display: flex; flex-direction: column">
+                <a href="#" class="footerBtn mb-1">Customer Support</a>
+                <a href="#" class="footerBtn">Contact</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-6 col-md-4 col-lg-2 mb-4">
+            <div class="me-md-2">
+              <h6 style="font-weight: 700">SOCIAL</h6>
+              <div class="mt-3" style="display: flex; flex-direction: column">
+                <a href="#" class="footerBtn mb-1">LinkedIn</a>
+                <a href="#" class="footerBtn mb-1">Facebook</a>
+                <a href="#" class="footerBtn">Telegram</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-md-4 col-lg-2 mt-2 mt-md-0">
+            <div class="me-md-2">
+              <h6 style="font-weight: 700">LEGAL</h6>
+              <div class="mt-3" style="display: flex; flex-direction: column">
+                <a href="#" class="footerBtn mb-1">Terms of Use</a>
+                <a href="#" class="footerBtn mb-1">Privacy Policy</a>
+                <a href="#" class="footerBtn">Legal Notice</a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div
+          class="row row-content p-4 text-center"
+          style="justify-content: space-between"
+        >
+          <div class="col-12 col-md-5">
+            <p class="ms-md-4" style="opacity: 61%">
+              Copyright &copy; CoinTrigger 2019
+            </p>
+          </div>
+          <div class="col-12 col-md-7 text-right" style="opacity: 61%">
+            <p class="text-md-end me-md-5 pe-md-4">
+              Skillful crafted by
+              <a
+                class="btn-link ms-1"
+                href="https://www.linkedin.com/in/mostafa-kashoul-milly-71453a1a3/"
+                >MostafaKMilly</a
+              >
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
-      integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
-      integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
       crossorigin="anonymous"
     ></script>
   </body>
